[package]
name = "yzos"
version = "0.1.0"
authors = ["funemy <liyzunique@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.3.12"
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.4.0"

[dev-dependencies]
array-init = "0.0.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "conf.json"