[package]
name = "yzos"
version = "0.1.0"
authors = ["funemy <liyzunique@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.5.1"
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.5.0"
pic8259_simple = '0.1.1'

[dev-dependencies]
array-init = "0.0.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "conf.json"