[package]
name = "yzos"
version = "0.1.0"
authors = ["funemy <liyzunique@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.6.0", features = ["map_physical_memory"] }
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.6.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"
bitflags = "1.0"
libm = "0.1"

[dev-dependencies]
array-init = "0.0.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "conf.json"